syntax = "proto3";

package chatgrupal;
option java_package = "pdytr.chatgrupal";
option java_outer_classname = "ChatGrupalProto";

message Mensaje {
  string usuario = 1;
  string texto = 2;
}

message ConectarRequest {
  string usuario = 1;
}

message ConectarResponse {
  repeated string mensajesGuardados = 1;
  int32 id = 2;
}

message EnviarMensajeRequest {
  Mensaje mensaje = 1;
  int32 id = 2;
}

message RecibirMensajeResponse {
  string mensaje = 1;
}

message DesconectarRequest {
  string usuario = 1;
  int32 id = 2;
}

message DesconectarResponse {
  string mensaje = 1;
}



message Empty {}

service ChatGrupal {
  rpc Chat(stream EnviarMensajeRequest) returns (stream RecibirMensajeResponse);
  rpc Conectar(ConectarRequest) returns (ConectarResponse);
  rpc Desconectar(DesconectarRequest) returns (DesconectarResponse);
}
